--- a/Full/MVCDemo-Full-472/MVCDemo-Full-472/Views/Home/Index.cshtml
+++ b/Full/MVCDemo-Full-472/MVCDemo-Full-472/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
 <main>
     <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+        <h1 id="title">ASP.NET MVC Demo - .NET Framework 4.7.2</h1>
+        <p class="lead">Demo application for deployment testing by Michał Antolik.</p>
         <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
     </section>
 
